# eaf

./: .Rbuildignore  .gitignore  .travis.yml  404.html  DESCRIPTION  DEVEL-README  Makefile  NAMESPACE  NEWS  NEWS.md  README.md  TODO  authors.html  cleanup  configure  configure.ac  cran-comments.md  extra.css  index.html  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml
R/: calls.R  common.R  eaf-package.R  eaf.R  eafplot.R  epsilon.R  hv.R  igd.R  interactive.R  nondominated.R  normalise.R  pdf_crop.R  read_datasets.R  vorob.R  whv.R  zzz.R
data/: CPFs.rda  HybridGA.rda  SPEA2minstoptimeRichmond.rda  SPEA2relativeRichmond.rda  SPEA2relativeVanzyl.rda  gcp2x2.rda
inst/: CITATION  REFERENCES.bib  WORDLIST
man/: CPFs.Rd  HybridGA.Rd  SPEA2minstoptimeRichmond.Rd  SPEA2relativeRichmond.Rd  SPEA2relativeVanzyl.Rd  Vorob.Rd  attsurf2df.Rd  choose_eafdiffplot.Rd  eaf-package.Rd  eafdiff.Rd  eafdiffplot.Rd  eafplot.Rd  eafs.Rd  epsilon.Rd  filter_dominated.Rd  gcp2x2.Rd  hv_contributions.Rd  hypervolume.Rd  igd.Rd  is.nondominated.Rd  is_nondominated.Rd  largest_eafdiff.Rd  nondominated.Rd  normalise.Rd  pareto_rank.Rd  pdf_crop.Rd  read.data.sets.Rd  read_datasets.Rd  whv_hype.Rd  whv_rect.Rd  write_datasets.Rd
man-roxygen/: arg_data.R  arg_ideal.R  arg_ideal_null.R  arg_maximise.R  arg_refpoint.R  arg_refset.R
news/: index.html
pkgdown/: _pkgdown.yml
reference/: CPFs.html  HybridGA.html  SPEA2minstoptimeRichmond.html  SPEA2relativeRichmond.html  SPEA2relativeVanzyl.html  Vorob.html  attsurf2df.html  choose_eafdiffplot.html  eaf-package.html  eafdiff.html  eafdiffplot.html  eafplot.html  eafs.html  epsilon.html  gcp2x2.html  hv_contributions.html  hypervolume.html  igd.html  index.html  largest_eafdiff.html  nondominated.html  normalise.html  pdf_crop.html  read_datasets.html  whv_hype.html  whv_rect.html  write_datasets.html
src/: Makevars  Makevars.in  Makevars.ucrt  Makevars.win  Rcommon.h  Reaf.c  Repsilon.c  Rhv.c  Rnondominated.c  avl.c  avl.h  common.h  cvector.h  eaf.c  eaf.h  eaf3d.c  eaf_input.c  eaf_io.h  eaf_io_priv.h  epsilon.h  gcc_attribs.h  hv.c  hv.h  hv_contrib.c  init.c  install.libs.R  io.c  io.h  io_priv.h  nondominated.h
tests/: eafplot.R  eafplot.Rout.saved  lin-sph.R  lin.S-sph.S-diff.txt  lin.S.txt  ran.100pts.3d.10  ran.100pts.3d.10.R  testthat.R
tools/: create-figures.R  winlibs.R
web/: README.html
(+109 files in other folders)
